--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express-handlebars": "^6.0.6",
     "font-awesome": "^4.7.0",
     "mysql2": "^2.3.3",
+    "nodemon": "^3.0.1",
     "sequelize": "^6.27.0",
     "socket.io": "^4.5.4",
     "sqlite3": "^5.1.4"
